src/snapshots/afrotd__parser__tests__rule_7.3.9.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 9
title: Passbehinderung - Zusammenfassung
text: "\ta) Sowohl Team A als auch Team B dürfen hinter der neutralen Zone ihre Gegner legal behindern.\n\tb) Spieler beider Teams dürfen jenseits der neutralen Zone legal behindern, nachdem der Pass berührt wurde (A.R. 7.3.9.I).\n\tc) Defense Spieler dürfen ihre Gegner, die die neutrale Zone überquert haben, legal berühren, wenn diese sich nicht in einer Position befinden, wo sie einen fangbaren Vorwärtspass fangen könnten.\n\t\t1. Regelverstöße, die sich in einem Down ereignen, bei dem ein Vorwärtspass die neutrale Zone überquert hat, sind nur dann Passbehinderung, wenn der Receiver die Möglichkeit hatte, einen fangbaren Vorwärtspass zu fangen.\n\t\t2. Die Regelverstöße, die sich in einem Down ereignen, bei dem ein Vorwärtspass die neutrale Zone nicht überquert hat, sind Verstöße gegen Regel 9.3.4 und die Strafe wird vom Previous Spot geahndet.\n\td) Regeln bezüglich Passbehinderung finden nur während eines Downs Anwendung, in dem ein legaler Vorwärtspass die neutrale Zone überquert (Regeln 2.19.3, 7.3.8.a bis 7.3.8.c)\n\te) Kontakt durch einen Team B-Spieler mit einem berechtigten Receiver, der ein persönliches Foul beinhaltet, durch das das Fangen eines fangbaren Passes behindert wird, kann entweder als Passbehinderung oder als persönliches Foul geregelt werden, wobei die Strafe für das persönliche Foul gemäß Regel 7.3.12 durchgeführt wird. Regel 7.3.8 bezieht sich speziell auf Kontakte während eines Passes. Wenn die Behinderung jedoch eine Aktion beinhaltet, die gewöhnlich zu einer Disqualifikation führen würde, wird der verursachende Spieler disqualifiziert.\n\tf) Bei einer Behinderung muss es zu einem körperlichen Kontakt gekommen sein (A.R. 7.3.8.I).\n\tg) Jeder Spieler hat territoriale Rechte und zufälliger Kontakt wird unter „... Versuch, einen Pass zu erreichen“ in Regel 7.3.8 geregelt. Wenn Gegner, die sich jenseits der neutralen Zone befinden, zusammenstoßen, während sie sich in Richtung des Passes bewegen, ist nur dann ein Foul eines oder beider Spieler gegeben, wenn es offensichtlich ist, dass die Behinderung des Gegners beabsichtigt war. Eine Passbehinderung kann nur im Zusammenhang mit einem fangbaren Vorwärtspass erfolgen.\n\th) Regeln bezüglich Passbehinderung gelten nicht, nachdem der Pass inbounds durch einen inbounds befindlichen Spieler berührt wurde oder einen Schiedsrichter berührt hat. Wurde ein Gegner gefoult, gilt die Strafe für das Foul und nicht für die Passbehinderung (A.R. 7.3.9.I).\n\ti) Nachdem der Pass im Flug berührt wurde, kann jeder Spieler während des verbleibenden Fluges des Passes einen legalen Block ausführen.\n\tj) Das Tackeln oder Ergreifen des Receivers oder anderer vorsätzlicher Kontakt, bevor dieser den Pass berührt, gilt als Beweis dafür, dass der Tackler den Pass ignoriert und deshalb ist dieser Kontakt illegal.\n\tk) Wird der Receiver getackelt oder umgelaufen, wenn der Vorwärtspass offensichtlich zu weit oder zu kurz geworfen wurde, so gilt das als Beweis dafür, dass der Pass ignoriert wurde und dieser Kontakt ist illegal. Das ist zwar keine Passbehinderung, aber ein Verstoß gegen Regel 9.1.12.a und wird mit 15 Metern gemäß Regel 7.3.12 inklusive eines First Downs geahndet. Verursacher schwerer Fouls müssen disqualifiziert werden."
interpretations: []
