src/snapshots/afrotd__parser__tests__rule_8.1.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 8
  - 1
  - 1
title: Punkterzielung
text: "Die Anzahl der Punkte eines gewinnbringenden Downs ergibt sich aus der nachfolgenden Tabelle: Touchdown . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 6 Punkte Fieldgoal . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 3 Punkte Safety (Punkte werden dem Gegner zuerkannt) . . . . . . . . . . . . . . . . . . . . 2 Punkte Erfolgreicher Try: Touchdown . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 2 Punkte Fieldgoal oder Safety . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 1 Punkt"
interpretations: []
