src/snapshots/afrotd__parser__tests__rule_8.1.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 8
  - 1
  - 2
title: Punkterzielung
text: Abgebrochene Spiele werden gemäß der BSO Deutschland gewertet.
interpretations: []
