src/snapshots/afrotd__parser__tests__rule_8.3.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 4
title: Fouls während eines Try nach einem Team Ballbesitzwechsel
text: "\ta) Strafen gegen eines der Teams werden durch die Regel aufgehoben (Ausnahme: Strafen für schwere persönliche Fouls, Fouls für unsportliches Verhalten, persönliche Dead Ball Fouls und Live Ball Fouls, die als Dead Ball Foul behandelt werden, werden beim anschließenden Kickoff oder vom Succeeding Spot in Extraperioden durchgeführt) (Regel 8.3.5) (A.R. 8.3.4.I und 8.3.4.II).\n\tb) Die Punkte von einem Team, das während des Downs ein Foul begeht, werden annulliert (A.R. 8.3.2.VII) (Ausnahme: Live Ball Fouls, die als Dead Ball Foul behandelt werden).\n\tc) Wenn beide Teams während des Downs foulen und Team B hatte vor dem Team Ballbesitzwechsel nicht gefoult, heben sich die Fouls auf, der Down wird nicht wiederholt und der Try ist vorüber. (Ausnahme: Strafen für schwere persönliche Fouls, Fouls für unsportliches Verhalten, persönliche Dead Ball Fouls und Live Ball Fouls, die als Dead Ball Foul behandelt werden, werden beim anschließenden Kickoff oder vom Succeeding Spot in Extraperioden durchgeführt (siehe Regel 8.3.5))."
interpretations: []
