src/snapshots/afrotd__parser__tests__rule_8.3.5.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 5
title: Fouls nach einem Try
text: "Strafen für Fouls, die sich nach einem Try ereignen, werden beim nachfolgenden Kickoff oder vom Succeeding Spot bei Extraperioden durchgeführt. Wird der Try jedoch wiederholt, werden diese Strafen vor der Wiederholung durchgeführt (Regel 10.1.6) (A.R. 10.2.5.XIII bis 10.2.5.XV und A.R. 3.2.3.VII)."
interpretations: []
