src/snapshots/afrotd__parser__tests__rule_8.3.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 6
title: Nächster Down
text: "Nach einem Try muss der Ball durch einen Kickoff oder am Succeeding Spot in Extraperioden ins Spiel gebracht werden. Das Team, das den 6-PunkteTouchdown erzielte, muss den Kickoff durchführen."
interpretations: []
