src/snapshots/afrotd__parser__tests__rule_8.4.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 8
  - 4
  - 1
title: Wie erzielt
text: "\ta) Ein Fieldgoal wird erzielt, wenn ein Scrimmage Kick, der ein Drop Kick oder ein Place Kick sein kann, die Querlatte zwischen den aufrechtstehenden Pfosten des Tores des Receiving Teams überfliegt, bevor der Ball einen Spieler des Kicking Teams oder den Boden berührt hat.\n\tb) Wenn ein legaler Fieldgoalversuch über die Querlatte zwischen den Pfosten fliegt und jenseits der Endlinie dead oder zurückgeweht wird, aber nicht über die Querlatte zurückkehrt und irgendwo dead wird, ist ein Fieldgoal erzielt worden. Das gesamte Tor, die Querlatte und die Pfosten sind im Zusammenhang mit dem Forward Progress des Balles als eine Linie und nicht als eine Fläche zu betrachten."
interpretations: []
